modified for better portfolio

--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 <head>
 	<title>Eunji Jeon's Portfolio</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
-
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+
+	<div class="loader">
+		<div class="inner"></div>
+	</div>
+
 	<div id="slides">
 
 		<div class="overlay"></div>
@@ -28,8 +35,7 @@
 		<div class="titleMessage">
 			<div class="heading">
 				<p class="main">EUNJI JEON</p>
-				<p class="sub typed">
-				</p>
+				<p class="sub typed"></p>
 			</div>
 		</div>
 
@@ -41,7 +47,7 @@
 	</div>
 
 	<nav id="navigation" class="navbar navbar-expand-lg">
-		  <a class="navbar-brand" href="#">EUNJI JEON</a>
+		  <a class="navbar-brand" href="index.html">EUNJI JEON</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -87,11 +93,11 @@
 						</p>
 						<p>I graduated from KyungHee university in Seoul, Korea in Communication and Journalism
 							and also spent a semester as an exchange student studying spanish and english at Uninter Universidad in Cuernavaca, Mexico.
-							After graduation, I started studying Data Science at Data Science school which is one of the most famous academies in Korea
+							After graduation, I started studying Data Science at DScience school which is one of the most famous academies in Korea
 							and took several Computer Science courses in Coursera.
 
 						</p>
-						<p>I am a passinate, brave, and active developer who never hesitate to learn new skill or languages. My life is full of programming and coding. I am just into that.
+						<p>I am a passinate, brave, and active developer who never hesitate to learn new skill or languages. My life is full of programming and coding. I am just into them.
 						</p>
 
 				</div>
@@ -108,7 +114,7 @@
 
 				<div class="col-md-12 text-center">
 					<h2>TECHNICAL SKILLS</h2>
-					<p>A representation of my proficiency in each skill</p>
+					<p>My proficiency in each skill</p>
 				</div>
 
 				<div class="owl-carousel owl-theme">
@@ -276,7 +282,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="https://eunji-jeon.github.io/kakao-clone-implementation/" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -299,7 +305,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -319,7 +325,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -339,7 +345,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -359,7 +365,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -379,7 +385,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -399,7 +405,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -419,7 +425,7 @@
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectlink">
+									<a href="" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
