modified for prettier portfolio

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 			<p class="subHeading">Like what you see?</p>
 			<h2>I'd love to hear from you!</h2>
 			<a href="mailTo:jej.career@gmail.com" class="contactButton">GET IN TOUCH!</a>
+			<a href="https://github.com/EUNJI-JEON" target="_blank" class="contactButton">CHECK MY GIT!</a>
 		</div>
 	</div>
 
@@ -264,15 +265,15 @@
 				<div class="filter">
 					<ul id="filters">
 						<li><a href="#" data-filter="*" class="current">ALL</a></li>
-						<li><a href="#" data-filter=".apps">Apps</a></li>
-						<li><a href="#" data-filter=".me">Me</a></li>
+						<li><a href="#" data-filter=".kaggle">Kaggle</a></li>
+						<li><a href="#" data-filter=".certificate">Certificates</a></li>
 						<li><a href="#" data-filter=".websites">Websites</a></li>
 					</ul>
 				</div>
 
 				<div class="itemsContainer">
 					<ul class="items">
-						<li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
 								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
@@ -295,10 +296,10 @@
 
 						</li>
 
-						<li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="kaggle col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/kaggle.png">
 
 								<div class="icons">
 									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
@@ -315,17 +316,17 @@
 
 						</li>
 
-						<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/ds.png">
 
 								<div class="icons">
-									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+									<a href="img/portfolio/certificates/ds1.pdf" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
 										<i class="fas fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectLink">
+									<a href="img/portfolio/certificates/ds1.pdf" target="_blank" class="projectLink">
 										<i class="fas fa-link"></i>
 									</a>
 
@@ -335,10 +336,150 @@
 
 						</li>
 
-						<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/ds.png">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/ds2.pdf" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/ds2.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/udemy.jpg">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/ask1.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/ask1.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/udemy.jpg">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/ask2.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/ask2.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/udemy.jpg">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/portfolio.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/portfolio.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/python.png">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/certificate.pdf" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/certificate.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/python.png">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/certificate2.pdf" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/certificate2.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/python.png">
+
+								<div class="icons">
+									<a href="img/portfolio/certificates/certificate3.pdf" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/certificate3.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="kaggle col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
+								<img src="img/portfolio/thumbnails/kaggle.png">
 
 								<div class="icons">
 									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
@@ -358,7 +499,7 @@
 						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/doodle.png">
 
 								<div class="icons">
 									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
@@ -378,7 +519,7 @@
 						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/youtube.png">
 
 								<div class="icons">
 									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
@@ -398,27 +539,7 @@
 						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
-
-								<div class="icons">
-									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
-										<i class="fas fa-search"></i>
-									</a>
-
-									<a href="" target="_blank" class="projectLink">
-										<i class="fas fa-link"></i>
-									</a>
-
-								</div>
-								<div class="imageOverlay"></div>
-							</div>
-
-						</li>
-
-						<li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-							<div class="item">
-
-								<img src="img/portfolio/thumbnails/kakao-logo.jpg">
+								<img src="img/portfolio/thumbnails/spotify.png">
 
 								<div class="icons">
 									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
