fixed some errors

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</p>
 						<p>I graduated from KyungHee university in Seoul, Korea in Communication and Journalism
 							and also spent a semester as an exchange student studying spanish and english at Uninter Universidad in Cuernavaca, Mexico.
-							After graduation, I started studying Data Science at DScience school which is one of the most famous academies in Korea
+							After graduation, I started studying Data Science at DS school which is one of the most famous data science academies in Korea
 							and took several Computer Science courses in Coursera.
 
 						</p>
