--- a/index.html
+++ b/index.html
@@ -155,6 +155,25 @@
 								<p>Used in most of my data based projects</p>
 						</div>
 
+						<div class="skill">
+								<span class="chart" data-percent="67">
+									<span class="percent">67</span>
+									<canvas height="152" width"152"></canvas>
+								</span>
+								<h4>Javascript</h4>
+								<p>Used in most of my website projects</p>
+						</div>
+
+						<div class="skill">
+								<span class="chart" data-percent="67">
+									<span class="percent">67</span>
+									<canvas height="152" width"152"></canvas>
+								</span>
+								<h4>HTML/CSS</h4>
+								<p>Used in most of my website projects</p>
+						</div>
+
+
 				</div>
 
 
@@ -302,7 +321,7 @@
 								<img src="img/portfolio/thumbnails/kaggle.png">
 
 								<div class="icons">
-									<a href="img/portfolio/kakao.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+									<a href="img/portfolio/certificates/titanic.png" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
 										<i class="fas fa-search"></i>
 									</a>
 
