--- a/index.html
+++ b/index.html
@@ -438,6 +438,26 @@
 						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 
+								<img src="img/portfolio/thumbnails/udemy.jpg">
+
+								<div class="icons">
+									<a href="img/portfolio/thumbnails/udemy-doodle.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a KakaoTalk-clone">
+										<i class="fas fa-search"></i>
+									</a>
+
+									<a href="img/portfolio/certificates/udemy-doodle.pdf" target="_blank" class="projectLink">
+										<i class="fas fa-link"></i>
+									</a>
+
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+
+						</li>
+
+						<li onclick="" class="certificate col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+
 								<img src="img/portfolio/thumbnails/python.png">
 
 								<div class="icons">
